syntax = "proto3";

option csharp_namespace = "ProtosContract";

package vehicles;

service Vehicles {
	rpc CreateVehicle(CreateVehicleRq) returns (CreateVehicleRs);
	rpc GetVehicle(GetVehicleRq) returns (GetVehicleRs);
	rpc DeleteVehicle(DeleteVehicleRq) returns (DeleteVehicleRs);
}

message CreateVehicleRq {
	string name = 1;
	int32 maxSpeed = 2;
	string parkingPlaceId = 3;
}

message CreateVehicleRs {
	bool success = 1;
}

message GetVehicleRq {
	string vehicleId = 1;
}

message GetVehicleRs {
	string id = 1;
	string name = 2;
	int32 maxSpeed = 3;
}

message DeleteVehicleRq {
	string id = 1;
}

message DeleteVehicleRs {
	bool success = 1;
}